--- a/proyecto-integrador/views/index.ejs
+++ b/proyecto-integrador/views/index.ejs
@@ -54,7 +54,7 @@
 									</figure>
 									<article class="product-box_data">
 										<h2>
-											<%= index[i].nombre %>
+											<%= index[i].nombre %> - <%= index[i].usuarios.nombreUsuario  %>
 										</h2>
 										<p>
 											<%= index[i].descripcion %> 
@@ -86,7 +86,7 @@
 									</figure>
 									<article class="product-box_data">
 										<h2>
-											<%= index[i].nombreProducto %>
+											<%= index[i].nombre %> - <a href=""><%= index[i].usuarios.nombreUsuario  %> </a>
 										</h2>
 										<p>
 											<%= index[i].descripcion %>
