--- a/proyecto-integrador/views/product.ejs
+++ b/proyecto-integrador/views/product.ejs
@@ -24,7 +24,7 @@
                                 <%= producto.nombre %>
                             </h2>
                             <p class="product-detail-description">
-                                <a class="product-detail-a" href="/product/edit/<%= producto.id %>">Editar</a>
+                                <a class="product-detail-a" href="/products/edit/<%= producto.id %>">Editar</a>
                             </p>
                         </div>
                         <p class="product-detail-description-p">
