--- a/proyecto-integrador/views/partials/headerLogueado.ejs
+++ b/proyecto-integrador/views/partials/headerLogueado.ejs
@@ -7,7 +7,7 @@
         <div>
             <ul class="ul-navbar-center logueado">
                 <li class="nav__ul-li"><a class="ul__li-a" href="/">TODOS LOS PRODUCTOS</a></li>
-                <li class="nav__ul-li"><a class="ul__li-a" href="/product/add">AGREGAR PRODUCTOS</a></li>
+                <li class="nav__ul-li"><a class="ul__li-a" href="/products/add">AGREGAR PRODUCTOS</a></li>
             </ul>
         </div>
         <div>
