--- a/proyecto-integrador/views/search-results.ejs
+++ b/proyecto-integrador/views/search-results.ejs
@@ -19,13 +19,15 @@
 				<% for( let i=0; i < products.length; i++ ) { %>
 					<div class="col-12 col-sm-6 col-lg-3">
 						<section class="product-box">
-							<a href="/product/<%= products[i].id %>">
+							<a href="/products
+							
+							/<%= products[i].id %>">
 								<figure class="product-box_image">
 									<img src="<%= products[i].imagen %>" alt="">
 								</figure>
 								<article class="product-box_data">
 									<h2>
-										<%= products[i].nombreProducto %>
+										<%= products[i].nombre %>
 									</h2>
 									<p>
 										<%= products[i].descripcion %>
