--- a/proyecto-integrador/views/partials/headerLogueado.ejs
+++ b/proyecto-integrador/views/partials/headerLogueado.ejs
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="nav__ul-li"><a class="ul__li-a" href="/users/profile/<%= locals.user.id %>">
+                <li class="nav__ul-li"><a class="ul__li-a" href="/users/profile/">
                         <%= nombreUsuario %> <i class="fas fa-user"></i>
                     </a>
                 </li>
