--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -26,7 +26,7 @@
 						</div>
 						<div>
 							<ul class="profile-ul">
-								<li class="profile-li">8 productos</li>
+								<li class="profile-li"><%= productos.length %> productos</li>
 								<li class="profile-li">200 seguidores</li>
 								<li class="profile-li">300 comentarios</li>
 							</ul>
