--- a/proyecto-integrador/views/product-edit.ejs
+++ b/proyecto-integrador/views/product-edit.ejs
@@ -12,7 +12,7 @@
     </div>
     <div class="container__form">
         <img src="/images/logo.png" alt="">
-        <form class="form-data" action="/products/store" method="post" >
+        <form class="form-data" action="/products/update/<%= producto.id %>" method="post" >
             <div class="contenedor-input">
                 <input class="form-input" type="text" name="imagen" placeholder="Imagen" value="<%= locals.oldData && locals.oldData.imagen ? locals.oldData.imagen : '' %>">
                 <label class="form-label" for="imagen"></label>
