--- a/proyecto-integrador/views/product-edit.ejs
+++ b/proyecto-integrador/views/product-edit.ejs
@@ -38,7 +38,7 @@
             </div>
 
             <div class="contenedor-input1">
-                <input class="form-input__button" type="submit" value="Agregar">
+                <input class="form-input__button" type="submit" value="Guardar cambios">
                 <label class="form-label" for="Agregar"></label>
             </div>
         </form>
