--- a/proyecto-integrador/views/profile.ejs
+++ b/proyecto-integrador/views/profile.ejs
@@ -4,75 +4,84 @@
 
 	<body>
 		<% if (locals.user) { %>
-		<%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
-		<% } else { %>
-			<%- include('./partials/header') %>
-		<% } %>
-			<!-- Datos del usuario -->
-			<section class="info-usuario products-wrapper details">
-				<div class="row">
-					<div class="img-container offset-3 col-2">
-						<img src="<%= usuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
-					</div>
-					<div class="data-container col-6">
-						<div class="d-flex align-items-center ">
-							<h1 class="main-title-profile">
-								<%= usuario.nombreUsuario %>
-									<a class="profile-a" href="/users/profile/edit">
-										<i class="fas fa-cog"></i>
-									</a>
-							</h1>
-							<a class="profile-a" class="btn mt-3 ml-4" href="">SEGUIR</a>
-						</div>
-						<div>
-							<ul class="profile-ul">
-								<li class="profile-li"><%= productos.length %> productos</li>
-								<li class="profile-li">200 seguidores</li>
-								<li class="profile-li">300 comentarios</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- /Datos del usuario -->
-
-			<!-- Mis productos -->
-			<div class="container products-wrapper">
-				<div class="row">
-					<div class="col-12">
-						<h2 class="products-title">Mis productos: <%= productos.length %></h2>
-					</div>
-					<!-- Show mis productos -->
-					<% for (let i=0; i < usuario.productos.length; i++ ) { %>
-						<div class="col-12 col-sm-6 col-lg-3">
-							<section class="product-box">
-								<a href="/products/<%= usuario.productos[i].id %>">
-									<figure class="product-box_image">
-										<img src="<%= usuario.productos[i].imagen %>" alt="">
-									</figure>
-									<article class="product-box_data">
-										<h2>
-											<%= usuario.productos[i].nombre %>
-										</h2>
-										<p>
-											<%= usuario.productos[i].descripcion %>
-										</p>
-										<% if (usuario.productos[i].comentarios && usuario.productos[i].comentarios.length > 0) { %>
-											<p>Comentarios: <%= usuario.productos[i].comentarios.length %></p>
-										<% } else { %>
-											<p>Sin comentarios</p>
-										<% } %>
-									</article>
-								</a>
-							</section>
-						</div>
+			<%- include('./partials/headerLogueado', { nombreUsuario: locals.user.nombreUsuario }) %>
+				<% } else { %>
+					<%- include('./partials/header') %>
 						<% } %>
+							<!-- Datos del usuario -->
+							<section class="info-usuario products-wrapper details">
+								<div class="row">
+									<div class="img-container offset-3 col-2">
+										<img src="<%= usuario.fotoPerfil %>" alt="foto de perfil" class="foto-perfil">
+									</div>
+									<div class="data-container col-6">
+										<div class="d-flex align-items-center ">
+											<h1 class="main-title-profile">
+												<%= usuario.nombreUsuario %>
+													<% if (locals.user && locals.user.id===usuario.id) { %>
+														<a class="profile-a"
+															href="/users/profile/edit/<%= usuario.id %>">
+															<i class="fas fa-cog"></i>
+														</a>
+														<% } %>
+											</h1>
+											<a class="profile-a" class="btn mt-3 ml-4" href="">SEGUIR</a>
+										</div>
+										<div>
+											<ul class="profile-ul">
+												<li class="profile-li">
+													<%= productos.length %> productos
+												</li>
+												<li class="profile-li">200 seguidores</li>
+												<li class="profile-li">300 comentarios</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</section>
+							<!-- /Datos del usuario -->
+
+							<!-- Mis productos -->
+							<div class="container products-wrapper">
+								<div class="row">
+									<div class="col-12">
+										<h2 class="products-title">Mis productos: <%= productos.length %>
+										</h2>
+									</div>
+									<!-- Show mis productos -->
+									<% for (let i=0; i < usuario.productos.length; i++ ) { %>
+										<div class="col-12 col-sm-6 col-lg-3">
+											<section class="product-box">
+												<a href="/products/<%= usuario.productos[i].id %>">
+													<figure class="product-box_image">
+														<img src="<%= usuario.productos[i].imagen %>" alt="">
+													</figure>
+													<article class="product-box_data">
+														<h2>
+															<%= usuario.productos[i].nombre %>
+														</h2>
+														<p>
+															<%= usuario.productos[i].descripcion %>
+														</p>
+														<% if (usuario.productos[i].comentarios &&
+															usuario.productos[i].comentarios.length> 0) { %>
+															<p>Comentarios: <%= usuario.productos[i].comentarios.length
+																	%>
+															</p>
+															<% } else { %>
+																<p>Sin comentarios</p>
+																<% } %>
+													</article>
+												</a>
+											</section>
+										</div>
+										<% } %>
 
 
-				</div>
-			</div>
-			<!-- /Mis productos -->
-			<%- include('./partials/footer') %>
+								</div>
+							</div>
+							<!-- /Mis productos -->
+							<%- include('./partials/footer') %>
 	</body>
 	<script src="/js/uikit.min.js"></script>
 	<script src="/js/header-scroll.js"></script>
