--- a/proyecto-integrador/views/search-results.ejs
+++ b/proyecto-integrador/views/search-results.ejs
@@ -25,7 +25,7 @@
 								</figure>
 								<article class="product-box_data">
 									<h2>
-										<%= productos[i].nombreProducto %>
+										<%= productos[i].nombre %>
 									</h2>
 									<p>
 										<%= productos[i].descripcion %>
